feat(refactor): removing ts and liting errors for build

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -43,6 +43,7 @@
 
 :root {
   --font-sans: "Inter", sans-serif;
+  --font-merri: "Merriweather", sans-serif;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
@@ -117,5 +118,12 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+
+@layer utilities {
+    .font-merri {
+    font-family: var(--font-merri);
   }
 }
